---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 2024-11-03
  Features:
  Changes:
    - Add settings to control lightning impact effects. For when hits both lightening rods and the ground/unprotected entities.
  Bugfixes:
  Info:
    - Remove changes introduced in previous mod version as Factorio's data structure changes didn't occur in the end.
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2024-10-14
  Features:
    - Updated to handle Factorio's changed 2.0.3 data structure. Is backwards compatible with 2.0.2 and before.
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2024-10-12
  Features:
  Changes:
  Bugfixes:
  Info:
    - Changed to require Factorio 2.0 rather than 1.2 as public release nears.
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2024-09-30
  Features:
    - Initial Release
  Changes:
  Bugfixes:
  Info: