@@ -10,9 +10,9 @@ Features
 ---------
 
 - Can disable the local light and bright screen flashing from lightning strikes.
-- Can disable the lightning strike graphic so there's no bright white lines on screen.
+- Can control the lightning strike graphics, ranging from full to no graphics.
 - Can control when the lightning sound plays.
-- Can control the frequency and effect of lightning strikes.
+- Can control the frequency and effect (damage & energy) of lightning strikes. Including scaling lightning rods capacity with modified per lighting energy values.
 
 
 
@@ -21,6 +21,7 @@ Options
 
 - Options to control when the lightning makes a sound. Can be always, never, or when a lightning strike occurs outside of a protected area and makes an explosion effect.
 - Options to make the lightning more and less frequent. Also to set the energy and damage values per lightning strike. For example allows for changing the frequency of lightning strikes, but keeping the cumulative impact from them. Each can also be fully disabled independently.
+- Option to have the lightning rods energy capacity and power drain scale with the frequency and energy of lightning strikes. Enabled by default so that lighting strikes happening half as often for twice the energy have the same cumulative factory power generation as vanilla Factorio lightning strikes. Scaling can be turned off if desired for some reason.
 
 
 
