@@ -8,7 +8,7 @@ lightning_settings-lightning_bolt_sound=Lightning Bolt Sound Enabled For
 lightning_settings-lightning_frequency_percentage=Lightning Frequency Percentage
 lightning_settings-lightning_damage_percentage=Lightning Damage Percentage
 lightning_settings-lightning_energy_percentage=Lightning Energy Percentage
-lightning_settings-scale_lightning_rod_capacity_to_energy=Scale Lightning Rod Energy Capacity
+lightning_settings-scale_lightning_rod_energy_source_to_lightning_settings=Scale Lightning Rod Energy Capacity & Drain
 
 
 
@@ -22,7 +22,7 @@ lightning_settings-lightning_bolt_sound=Set when a lightning strike creates the 
 lightning_settings-lightning_frequency_percentage=Change how often lightning happens compared to vanilla Factorio. 0% disables lightning entirely. Vanilla factorio has 1 strike per chunk every 10 seconds.
 lightning_settings-lightning_damage_percentage=Change how much damage lightning does to unprotected entities compared to vanilla Factorio. 0% disables all damage entirely. Vanilla factorio does 100 damage per strike.
 lightning_settings-lightning_energy_percentage=Change how much energy lightning provides to a power network via a lightning rod entities compared to vanilla Factorio. 0% disables all energy entirely. Vanilla factorio provides 1,000 MJ energy per strike, although lighting rods generally have low capture percentages of this.
-lightning_settings-scale_lightning_rod_capacity_to_energy=If the capacity of lightning rods energy capacity is scaled inline with the setting: __1__
+lightning_settings-scale_lightning_rod_energy_source_to_lightning_settings=If the capacity and drain of lightning rods is scaled inline with the lightning frequency and energy settings. Specifically the settings "__1__" and "__2__". For example when enabled lighting strikes happening half as often for twice the energy will have the same cumulative factory power generation as vanilla Factorio lightning strikes.
 
 
 
